# hapi-docker-compose

./: .gitignore  compose.yaml
_attic/env/: default.py  init.py
_attic/image/_hapi_default/: Dockerfile
_attic/service/.template/: .gitignore
_attic/service/janusgraph/: .gitignore
_template/config/args/: arg_project.env  arg_someservice_service_1.env  example_arg_local.env
_template/config/inits/: init_default.py
_template/image/: Notes.md
cli/: .gitignore  pyproject.toml
cli/src/hapisetup/: cli.py  compose.py  compose_base.py  compose_cli.py  hapisetup.py  service.py
config/: compose.yaml  env_postgres_service.env  init.py  init_default.py  init_local.py
elasticsearch/config/args/: arg_default.env  arg_hapi_service.env
elasticsearch/config/composes/: compose_default.yaml
elasticsearch/config/envs/: default.env
elasticsearch/config/inits/: init_default.py
elasticsearch/image/: Dockerfile
env/: default.py
hapi/config/args/: arg_default.env  arg_elasticsearch_service.env  arg_postgres_service.env
hapi/config/composes/: compose_debug_profile.yaml  compose_default.yaml  compose_elasticsearch_service.yaml  compose_hapi_load_profile.yaml  compose_postgres_service.yaml
hapi/config/envs/: default.env
hapi/image/: .dockerignore  Dockerfile
hapi/image/root/hapi-run-cli/: pyproject.toml
hapi/image/root/hapi-run-cli/src/hapirun/: cli.py
image/_janusgraph_default/: Dockerfile
postgres/: .gitignore
postgres/config/: cli-environment-defaults.py  compose_default.yaml  init.py
postgres/image/: Dockerfile
template/: .gitignore
(+18 files in other folders)
