[tool.poetry]
name = "hapi-run"
version = "0.1.0"
description = ""
authors = ["Shahim Essaid <shahim@essaid.com>"]
readme = "README.md"
packages = [
    {include = "hapirun",  from = "src"}
]
[tool.poetry.scripts]
run-hapi = "hapirun.cli:cli"



[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
